--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <tbody>
         <tr>
           <td>
-            <a class="btn btn-light" href="getallplanes.html"><i class="fa fa-plane"></i> GET</a><br /><br />
+            <a class="btn btn-light" href="views/getallplanes.html"><i class="fa fa-plane"></i> GET</a><br /><br />
             GET <b>/planes</b><br />
           </td>
           <td>planes</td>
@@ -38,7 +38,8 @@
         </tr>
         <tr>
           <td>
-            <a class="btn btn-light" href="getplaneviaid.html"><i class="fa fa-plane"></i> GET {id}</a><br /><br />
+            <a class="btn btn-light" href="views/getplaneviaid.html"><i class="fa fa-plane"></i> GET
+              {id}</a><br /><br />
             GET <b>/plane/{id}</b><br />
           </td>
           <td>planes</td>
@@ -46,12 +47,12 @@
           <td> NO JSON Data
             (id field sent using API url parameter)</td>
           <td>Display single plane</td>
-          <td>SON object of plane</td>
+          <td>JSON object of plane</td>
         </tr>
 
         <tr>
           <td>
-            <a class="btn btn-light" href="insertplaneform.html"><i class="fa fa-plus"></i> POST</a><br />
+            <a class="btn btn-light" href="views/insertplaneform.html"><i class="fa fa-plus"></i> POST</a><br />
             <p>Post with form</p>
             POST <b>/planes</b><br />
           </td>
@@ -64,7 +65,7 @@
         </tr>
         <tr>
           <td>
-            <a class="btn btn-light" href="updateplaneform.html"><i class="fa fa-edit"></i> PUT </a><br />
+            <a class="btn btn-light" href="views/updateplaneform.html"><i class="fa fa-edit"></i> PUT </a><br />
             <p>Put with form</p>
             PUT <b>/planes/{id}</b><br />
           </td>
@@ -79,7 +80,7 @@
 
         <tr>
           <td>
-            <a class="btn btn-light" href="deleteplane.html"><i class="fa fa-trash"></i> DELETE</a><br /><br />
+            <a class="btn btn-light" href="views/deleteplane.html"><i class="fa fa-trash"></i> DELETE</a><br /><br />
             DELETE <b>/planes/{id}</b><br />
           </td>
           <td>planes</td>
